<resources>
    <string name="app_name">Paper Scanner</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="back_button">Back button</string>
    <string name="picture_preview">Picture preview</string>
    <string name="submit_image_button">submit image button</string>
    <string name="camera_button">Camera button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_scan">Cancel scan</string>
    <string name="file_name">File Name</string>
    <string name="add_another_image">Add another image</string>
    <string name="submit_pdf">Submit PDF</string>
    <string name="start_scan">Start scan</string>
</resources>